[package]
name = "cyphal"
authors = ["David Lenfesty <lenfesty@ualberta.ca>"]
version = "0.2.0-preview0"
edition = "2024"
rust-version = "1.85"

description = "Full functionality reference implementation of OpenCyphal in Rust"

repository = "https://github.com/davidlenfesty/cyphal.rs"

readme = "README.md"

keywords = ["cyphal", "opencyphal", "can", "uav", "embedded"]
categories = ["no-std", "embedded"]

license = "Apache-2.0/MIT"

# Most of these are temporary until I replace the functionality I need from them
[dependencies]
num-derive = "0.4"
bitfield = "0.13"


crc-any = { version = "2.5", default-features = false }

# TODO: if new embedded-hal version releases, this can be changed to crates.io
embedded-hal = "1.0"
embedded-can = "0.4"
embedded-time = "0.12.0"
streaming-iterator = "0.1.5"

# should only in no_std, so if feature std not set - ref: https://github.com/rust-lang/cargo/issues/1839
heapless = "0.7.7"

[dependencies.num-traits]
version = "0.2"
default-features = false
features = ["libm"]

[dependencies.arrayvec]
version = "0.5.2"
default-features = false

[dev-dependencies]
mock_instant = { version = "0.2", features = ["sync"] }

[features]
default = []
std = []
